--- a/Huis/Huis.UI/Huis.UI.csproj
+++ b/Huis/Huis.UI/Huis.UI.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Huis.Shared\Huis.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
